--- a/warapen.html
+++ b/warapen.html
@@ -97,7 +97,7 @@
              crossorigin="anonymous" />
         <div>
           <div class="empresa">SchefferTec • Smart Solutions</div>
-          <div class="muted">CNPJ 53.773.431/0001-57 • Rua Júlio de Castilhos, 183 – Centro, Novo Hamburgo 93510-365</div>
+          <div class="muted">CNPJ 53.773.431/0001-57 • Rua Júlio de Castilhos, 183 – Centro, Novo Hamburgo 93510-365 Fone: (51)3586-1675</div>
         </div>
       </div>
       <div style="text-align:right; min-width:220px;">
@@ -462,6 +462,7 @@ document.addEventListener('DOMContentLoaded', () => {
 </script>
 </body>
 </html>
+
 
 
 
