--- a/warapen.html
+++ b/warapen.html
@@ -115,7 +115,7 @@
         <div class="section-title">Dados do cliente</div>
         <div class="grid">
           <div class="col-6 ac-wrap">
-            <label>Nome (digite para buscar)</label>
+            <label>Nome </label>
             <input id="cliente_nome" autocomplete="off" placeholder="Comece a digitar..." />
             <div id="acClientes" class="ac-list" style="display:none;"></div>
           </div>
@@ -462,6 +462,7 @@ document.addEventListener('DOMContentLoaded', () => {
 </script>
 </body>
 </html>
+
 
 
 
