--- a/warapen.html
+++ b/warapen.html
@@ -157,7 +157,7 @@
     <table id="itens">
       <thead>
         <tr>
-          <th style="width:38%">Descrição (digite para buscar)</th>
+          <th style="width:38%">Descrição </th>
           <th style="width:16%">Tipo</th>
           <th style="width:12%">Qtd</th>
           <th style="width:16%">Valor unit. (R$)</th>
@@ -462,6 +462,7 @@ document.addEventListener('DOMContentLoaded', () => {
 </script>
 </body>
 </html>
+
 
 
 
