--- a/warapen.html
+++ b/warapen.html
@@ -111,14 +111,14 @@
       </div>
     </div>
 
-    <h1>Orçamento de Assistência Técnica</h1>
+   
 
     <div class="grid" style="margin-top:8px">
       <div class="col-8">
         <div class="section-title">Dados do cliente</div>
         <div class="grid">
           <div class="col-6 ac-wrap">
-            <label>Nome (digite para buscar)</label>
+            <label>Nome </label>
             <input id="cliente_nome" autocomplete="off" placeholder="Comece a digitar..." />
             <div id="acClientes" class="ac-list" style="display:none;"></div>
           </div>
@@ -156,7 +156,7 @@
     </div>
 
     <div class="section-title">Itens de orçamento</div>
-    <div class="muted">Adicione peças/serviços; valores somam automaticamente.</div>
+    
     <table id="itens">
       <thead>
         <tr>
@@ -469,6 +469,7 @@ document.addEventListener('DOMContentLoaded', () => {
 </script>
 </body>
 </html>
+
 
 
 
