--- a/warapen.html
+++ b/warapen.html
@@ -182,7 +182,7 @@
         <div class="totais">
           <div><span>Peças/insumos</span><strong id="tPecas">R$ 0,00</strong></div>
           <div><span>Mão de obra</span><strong id="tMao">R$ 0,00</strong></div>
-          <div><span>Desconto (R$)</span><input id="desconto" type="number" min="0" step="0.01" value="0" /></div>
+          <div><span>Desconto</span><input id="desconto" type="number" min="0" step="0.01" value="0" /></div>
           <div><span>Total</span><strong id="tTotal">R$ 0,00</strong></div>
         </div>
       </div>
@@ -469,6 +469,7 @@ document.addEventListener('DOMContentLoaded', () => {
 </script>
 </body>
 </html>
+
 
 
 
